# cellular-automaton

./: CMakeLists.txt  LICENSE  README.md  generate_solution.bat
include/: cellular_automaton.h
src/app/: CMakeLists.txt  main.cpp
